* zlib fix pkgconfigdir

--- a/package/archiver/zlib/zlib.conf
+++ b/package/archiver/zlib/zlib.conf
@@ -21,3 +21,5 @@ if [ "$SDECFG_STATIC" = "0" ] ; then
 fi
 
 var_append makeinstopt ' ' 'mandir=$mandir'
+var_append makeinstopt " " "pkgconfigdir=/usr/$libdir/pkgconfig"
+
