R fix util-linux

--- a/package/base/util-linux/util-linux.conf
+++ b/package/base/util-linux/util-linux.conf
@@ -28,6 +28,9 @@ var_append extraconfopt ' ' '--enable-partx --disable-kill'
 if atstage cross || [ $SDECFG_LIBC = 'uclibc' ]; then
 	var_append GCC_WRAPPER_APPEND ' ' '--include locale.h'
 fi
+if [ $stagelevel -le 3 ] ; then
+var_append extraconfopt ' ' '--without-python'
+fi
 
 # cross build tweak #2
 hook_add premake 5 'AL_OPTS="-I $root/usr/share/aclocal" ./autogen.sh'
