--- a/package/filesystem/udev/udev.conf
+++ b/package/filesystem/udev/udev.conf
@@ -13,49 +13,26 @@
 # GNU General Public License can be found in the file COPYING.
 # --- T2-COPYRIGHT-NOTE-END ---
 
-if [ $prefix_auto = 1 ] ; then
-	prefix=
-	set_confopt
-fi
-
-udev_uxp(){
-	for x in `ls -d extras/ 2>/dev/null`; do
-		var_append uxp " " "extras/$x"
-	done
-}
-
-udev_pm(){
-	echo "Installing T2 configuration and scripts ..."
-	for x in `ls $confdir/[0-9]*.rules 2>/dev/null`; do
-		cp -fv $x $root$sysconfdir/udev/rules.d/
-	done
-	for x in `ls $confdir/scripts_* 2>/dev/null`; do
-		d=${x#*scripts_}; d=${d##*/}
-		cp -fv $x $root/lib/udev/$d
-		chmod +x $root/lib/udev/$d
-	done
-}
-
-[ $SDECFG_PKG_UDEV_DEVDIR ] || SDECFG_PKG_UDEV_DEVDIR=/dev
+# BK stuff removed.
 
 if pkginstalled gobject-introspection; then
 	var_append confopt " " " --enable-introspection"
 else
  var_append confopt " " " --disable-introspection"
 fi 
-if  pkginstalled attr  &&  pkginstalled  acl  &&  pkginstalled libusb-compat ;then
-	var_append confopt " " " --enable-extras"
-else
-        var_append confopt " " " --disable-extras"
-fi
 
-var_append confopt " " "--libexecdir=/lib/udev" # $libdir?
-var_append makeopt " " "LD=$CC LDFLAGS= udevdir=$SDECFG_PKG_UDEV_DEVDIR"
-var_append makeopt " " 'EXTRAS="$uxp" prefix='
-var_append makeinstopt " " "LD=$CC LDFLAGS= udevdir=$SDECFG_PKG_UDEV_DEVDIR"
-var_append makeinstopt " " 'EXTRAS="$uxp" prefix='
-var_append makeinstopt " " "pkgconfigdir=/usr/lib/pkgconfig"
+# BK
+# --prefix=/usr --sysconfdir=/etc --localstatedir=/var --enable-introspection=no --build=i486-pc-linux-gnu
+var_append confopt '' ' --sbindir=/sbin --libexecdir=/lib/udev --with-rootlibdir=/lib --with-firmware-path=/lib/firmware/updates:/lib/firmware --disable-selinux --enable-libkmod --with-rootprefix="" --disable-gtk-doc --disable-manpages --disable-keymap --with-modprobe=/sbin/modprobe --libexecdir=/usr/libexec --enable-modules --enable-split-usr --exec-prefix=""'
 
-hook_add premake  5 "udev_uxp"
-hook_add premake  5 "mkdir -p $root/lib/udev"
-hook_add postmake 5 "udev_pm"
+# BK remove:
+#var_append confopt " " "--libexecdir=/lib/udev" # $libdir?
+
+# BK stuff removed.
+
+# BK eudev configure cannot find libkmod.pc...
+udev_find_libkmod()
+{
+ if [! -f $root/usr/lib/pkgconfig/libkmod.pc];then cp -a $root/lib/pkgconfig/libkmod.pc $root/usr/lib/pkgconfig/; fi
+}
+hook_add preconf 5 "udev_find_libkmod"
