* kmod set sysconfdir

--- a/package/base/kmod/kmod.conf
+++ b/package/base/kmod/kmod.conf
@@ -12,9 +12,7 @@
 # GNU General Public License can be found in the file COPYING.
 # --- T2-COPYRIGHT-NOTE-END ---
 
-prefix=
-set_confopt
-
+ var_append confopt ' ' '--sysconfdir=/etc'
 pkginstalled zlib    &&  var_append confopt ' ' '--with-zlib'
 pkginstalled libxslt || var_append confopt ' ' '--disable-manpages'
 pkginstalled xz      && var_append confopt ' ' '--with-xz'
