* icu4c remove data archive

--- a/package/develop/icu4c/icu4c.conf
+++ b/package/develop/icu4c/icu4c.conf
@@ -16,7 +16,7 @@ srcdir="icu/source"
 
 export ICU_TEMP_FOLDER=$base/build/$SDECFG_ID/TOOLCHAIN/tmp/icu4c/
 
-var_append confopt ' ' ' --with-data-packaging=archive'
+#var_append confopt ' ' ' --with-data-packaging=archive'
 
 icu4c_postmake()
 {
